hide show list when off canvas to avoid scrollbars

--- a/src/scss/_offcanvas.scss
+++ b/src/scss/_offcanvas.scss
@@ -7,13 +7,20 @@
     left: 0;
   }
 
-  .container
-  .sidebar {
+  .container .sidebar {
     left: -285px;
+
+    sd-shows .list-group {
+      display: none;
+    }
   }
 
   .container.active {
     left: 300px;
+
+    sd-shows .list-group {
+      display: block;
+    }
   }
 
   .sidebar {
